<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/switchTitle"
        android:textColor="@color/main"
        android:textSize="80sp"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installer"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developed"
        android:textSize="16sp"
        android:id="@+id/textViewBottom"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

</LinearLayout>