<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/aboutTV3"
        android:textSize="20sp"
        android:id="@+id/textView4"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/aboutTV2"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/version"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:layout_weight="1" />


</LinearLayout>